--- a/EQ/EQCurrentAccountCell.xib
+++ b/EQ/EQCurrentAccountCell.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12C3103</string>
+		<string key="IBDocument.SystemVersion">12E55</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.34</string>
-		<string key="IBDocument.HIToolboxVersion">625.00</string>
+		<string key="IBDocument.AppKitVersion">1187.39</string>
+		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">2083</string>
@@ -104,7 +104,7 @@
 							<object class="IBUILabel" id="398152010">
 								<reference key="NSNextResponder" ref="1028399648"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{230, 5}, {94, 30}}</string>
+								<string key="NSFrame">{{233, 5}, {45, 30}}</string>
 								<reference key="NSSuperview" ref="1028399648"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="785229600"/>
@@ -122,12 +122,12 @@
 								<reference key="IBUIFontDescription" ref="1022357518"/>
 								<reference key="IBUIFont" ref="447851190"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-								<double key="preferredMaxLayoutWidth">94</double>
+								<double key="preferredMaxLayoutWidth">45</double>
 							</object>
 							<object class="IBUILabel" id="785229600">
 								<reference key="NSNextResponder" ref="1028399648"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{328, 7}, {120, 30}}</string>
+								<string key="NSFrame">{{286, 7}, {120, 30}}</string>
 								<reference key="NSSuperview" ref="1028399648"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="780286654"/>
@@ -150,7 +150,7 @@
 							<object class="IBUILabel" id="780286654">
 								<reference key="NSNextResponder" ref="1028399648"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{454, 7}, {73, 30}}</string>
+								<string key="NSFrame">{{411, 7}, {73, 30}}</string>
 								<reference key="NSSuperview" ref="1028399648"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="193525868"/>
@@ -174,7 +174,7 @@
 							<object class="IBUILabel" id="193525868">
 								<reference key="NSNextResponder" ref="1028399648"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{541, 7}, {75, 30}}</string>
+								<string key="NSFrame">{{487, 7}, {75, 30}}</string>
 								<reference key="NSSuperview" ref="1028399648"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="749059973"/>
@@ -198,7 +198,7 @@
 							<object class="IBUILabel" id="749059973">
 								<reference key="NSNextResponder" ref="1028399648"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{621, 7}, {70, 30}}</string>
+								<string key="NSFrame">{{569, 7}, {92, 30}}</string>
 								<reference key="NSSuperview" ref="1028399648"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="455888523"/>
@@ -217,12 +217,12 @@
 								<reference key="IBUIFontDescription" ref="1022357518"/>
 								<reference key="IBUIFont" ref="447851190"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-								<double key="preferredMaxLayoutWidth">70</double>
+								<double key="preferredMaxLayoutWidth">92</double>
 							</object>
 							<object class="IBUILabel" id="455888523">
 								<reference key="NSNextResponder" ref="1028399648"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{698, 7}, {60, 30}}</string>
+								<string key="NSFrame">{{665, 7}, {92, 30}}</string>
 								<reference key="NSSuperview" ref="1028399648"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -240,7 +240,7 @@
 								<reference key="IBUIFontDescription" ref="1022357518"/>
 								<reference key="IBUIFont" ref="447851190"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-								<double key="preferredMaxLayoutWidth">60</double>
+								<double key="preferredMaxLayoutWidth">92</double>
 							</object>
 						</array>
 						<string key="NSFrameSize">{768, 43}</string>
@@ -359,14 +359,14 @@
 						<int key="objectID">2</int>
 						<reference key="object" ref="627532591"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="455888523"/>
 							<reference ref="749059973"/>
 							<reference ref="193525868"/>
 							<reference ref="780286654"/>
 							<reference ref="785229600"/>
-							<reference ref="398152010"/>
 							<reference ref="655016001"/>
 							<reference ref="333707889"/>
+							<reference ref="398152010"/>
+							<reference ref="455888523"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
