--- a/EQ/EQNewOrderViewController.xib
+++ b/EQ/EQNewOrderViewController.xib
@@ -203,7 +203,7 @@
 								<string key="NSFrame">{{270, 20}, {119, 21}}</string>
 								<reference key="NSSuperview" ref="844047730"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="861622452"/>
+								<reference key="NSNextKeyView" ref="25804132"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -225,6 +225,7 @@
 								<string key="NSFrame">{{279, 0}, {103, 42}}</string>
 								<reference key="NSSuperview" ref="844047730"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="861622452"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -305,7 +306,7 @@
 								<string key="NSFrame">{{724, 7}, {35, 30}}</string>
 								<reference key="NSSuperview" ref="844047730"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="560306080"/>
+								<reference key="NSNextKeyView" ref="1009978206"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -921,7 +922,6 @@
 								<string key="NSFrame">{{593, 835}, {161, 21}}</string>
 								<reference key="NSSuperview" ref="456289149"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -932,6 +932,7 @@
 								<reference key="IBUITextColor" ref="761053023"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUITextAlignment">2</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<string key="name">Arial-BoldMT</string>
 									<string key="family">Arial</string>
@@ -1909,7 +1910,7 @@
 							<object class="IBUILabel" id="181606489">
 								<reference key="NSNextResponder" ref="456289149"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{458, 493}, {58, 21}}</string>
+								<string key="NSFrame">{{436, 493}, {58, 29}}</string>
 								<reference key="NSSuperview" ref="456289149"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="935972382"/>
@@ -1919,7 +1920,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Cantidad</string>
+								<string key="IBUIText">Cantidad Pedida</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -1927,9 +1928,39 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUINumberOfLines">2</int>
+								<int key="IBUITextAlignment">1</int>
 								<reference key="IBUIFontDescription" ref="9326832"/>
 								<reference key="IBUIFont" ref="1047825316"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<double key="preferredMaxLayoutWidth">58</double>
+							</object>
+							<object class="IBUILabel" id="50341511">
+								<reference key="NSNextResponder" ref="456289149"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{492, 493}, {58, 29}}</string>
+								<reference key="NSSuperview" ref="456289149"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<string key="IBUIText">Cantidad Facturada</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEAA</bytes>
+									<reference key="NSCustomColorSpace" ref="497049054"/>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUINumberOfLines">2</int>
+								<int key="IBUITextAlignment">1</int>
+								<reference key="IBUIFontDescription" ref="9326832"/>
+								<reference key="IBUIFont" ref="1047825316"/>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<double key="preferredMaxLayoutWidth">58</double>
 							</object>
 							<object class="IBUILabel" id="935972382">
 								<reference key="NSNextResponder" ref="456289149"/>
@@ -1954,6 +1985,62 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<reference key="IBUIFontDescription" ref="9326832"/>
 								<reference key="IBUIFont" ref="1047825316"/>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+							</object>
+							<object class="IBUILabel" id="17193551">
+								<reference key="NSNextResponder" ref="456289149"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{685, 393}, {61, 21}}</string>
+								<reference key="NSSuperview" ref="456289149"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<string key="IBUIText">Precio</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEAA</bytes>
+									<reference key="NSCustomColorSpace" ref="497049054"/>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="356300462">
+									<int key="type">1</int>
+									<double key="pointSize">17</double>
+								</object>
+								<object class="NSFont" key="IBUIFont" id="37428373">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">17</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+							</object>
+							<object class="IBUILabel" id="488041968">
+								<reference key="NSNextResponder" ref="456289149"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{677, 423}, {64, 21}}</string>
+								<reference key="NSSuperview" ref="456289149"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<string key="IBUIText"/>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEAA</bytes>
+									<reference key="NSCustomColorSpace" ref="497049054"/>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUITextAlignment">2</int>
+								<reference key="IBUIFontDescription" ref="356300462"/>
+								<reference key="IBUIFont" ref="37428373"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
@@ -2062,6 +2149,7 @@
 												<string key="NSFrameSize">{720, 457}</string>
 												<reference key="NSSuperview" ref="761233557"/>
 												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="14718272"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIUserInteractionEnabled">NO</bool>
 												<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -2088,6 +2176,7 @@
 												<string key="NSFrame">{{333, 89}, {137, 21}}</string>
 												<reference key="NSSuperview" ref="761233557"/>
 												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="224395165"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -2188,7 +2277,7 @@
 												<string key="NSFrame">{{408, 127}, {292, 250}}</string>
 												<reference key="NSSuperview" ref="761233557"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="166830410"/>
+												<reference key="NSNextKeyView" ref="686360340"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<reference key="IBUIBackgroundColor" ref="477689881"/>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -2327,7 +2416,7 @@
 														<string key="NSFrame">{{88, 13}, {56, 35}}</string>
 														<reference key="NSSuperview" ref="838212371"/>
 														<reference key="NSWindow"/>
-														<reference key="NSNextKeyView" ref="686360340"/>
+														<reference key="NSNextKeyView" ref="786973551"/>
 														<string key="NSReuseIdentifierKey">_NS:9</string>
 														<bool key="IBUIOpaque">NO</bool>
 														<bool key="IBUIClipsSubviews">YES</bool>
@@ -2396,7 +2485,7 @@
 														<string key="NSFrame">{{64, 4}, {106, 33}}</string>
 														<reference key="NSSuperview" ref="686360340"/>
 														<reference key="NSWindow"/>
-														<reference key="NSNextKeyView" ref="786973551"/>
+														<reference key="NSNextKeyView" ref="166830410"/>
 														<string key="NSReuseIdentifierKey">_NS:9</string>
 														<bool key="IBUIOpaque">NO</bool>
 														<bool key="IBUIClipsSubviews">YES</bool>
@@ -2443,7 +2532,7 @@
 														<string key="NSFrame">{{30, 0}, {139, 21}}</string>
 														<reference key="NSSuperview" ref="867849411"/>
 														<reference key="NSWindow"/>
-														<reference key="NSNextKeyView" ref="619115256"/>
+														<reference key="NSNextKeyView" ref="160631546"/>
 														<string key="NSReuseIdentifierKey">_NS:9</string>
 														<bool key="IBUIOpaque">NO</bool>
 														<bool key="IBUIClipsSubviews">YES</bool>
@@ -2464,6 +2553,7 @@
 														<string key="NSFrame">{{0, 3}, {17, 17}}</string>
 														<reference key="NSSuperview" ref="867849411"/>
 														<reference key="NSWindow"/>
+														<reference key="NSNextKeyView" ref="58593890"/>
 														<string key="NSReuseIdentifierKey">_NS:9</string>
 														<bool key="IBUIUserInteractionEnabled">NO</bool>
 														<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -2478,6 +2568,7 @@
 														<string key="NSFrame">{{160, 4}, {58, 15}}</string>
 														<reference key="NSSuperview" ref="867849411"/>
 														<reference key="NSWindow"/>
+														<reference key="NSNextKeyView" ref="894120439"/>
 														<string key="NSReuseIdentifierKey">_NS:9</string>
 														<bool key="IBUIUserInteractionEnabled">NO</bool>
 														<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -2492,6 +2583,7 @@
 														<string key="NSFrame">{{161, 1}, {57, 21}}</string>
 														<reference key="NSSuperview" ref="867849411"/>
 														<reference key="NSWindow"/>
+														<reference key="NSNextKeyView" ref="619115256"/>
 														<string key="NSReuseIdentifierKey">_NS:9</string>
 														<bool key="IBUIOpaque">NO</bool>
 														<bool key="IBUIClipsSubviews">YES</bool>
@@ -2515,6 +2607,7 @@
 												<string key="NSFrame">{{20, 96}, {293, 21}}</string>
 												<reference key="NSSuperview" ref="761233557"/>
 												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="834209549"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<reference key="IBUIBackgroundColor" ref="477689881"/>
 												<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -2523,7 +2616,7 @@
 										<string key="NSFrame">{{0, 45}, {720, 554}}</string>
 										<reference key="NSSuperview" ref="352898228"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="14718272"/>
+										<reference key="NSNextKeyView" ref="411489120"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<reference key="IBUIBackgroundColor" ref="477689881"/>
 										<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -2554,6 +2647,7 @@
 												<string key="NSFrameSize">{720, 259}</string>
 												<reference key="NSSuperview" ref="786973551"/>
 												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="560306080"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<reference key="IBUIBackgroundColor" ref="477689881"/>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -3019,6 +3113,14 @@
 						<reference key="destination" ref="1009978206"/>
 					</object>
 					<int key="connectionID">1664</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">priceLabel</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="488041968"/>
+					</object>
+					<int key="connectionID">1668</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -3543,6 +3645,9 @@
 							<reference ref="747315571"/>
 							<reference ref="312254293"/>
 							<reference ref="903949088"/>
+							<reference ref="50341511"/>
+							<reference ref="488041968"/>
+							<reference ref="17193551"/>
 						</array>
 						<reference key="parent" ref="766721923"/>
 						<string key="objectName">View - Body</string>
@@ -4160,6 +4265,21 @@
 						<reference key="object" ref="876834773"/>
 						<reference key="parent" ref="838212371"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1665</int>
+						<reference key="object" ref="50341511"/>
+						<reference key="parent" ref="456289149"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1666</int>
+						<reference key="object" ref="17193551"/>
+						<reference key="parent" ref="456289149"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1667</int>
+						<reference key="object" ref="488041968"/>
+						<reference key="parent" ref="456289149"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -4238,6 +4358,9 @@
 				<string key="1646.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="1647.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="1648.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="1665.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="1666.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="1667.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="177.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="185.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -4290,7 +4413,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">1664</int>
+			<int key="maxID">1668</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -4453,6 +4576,7 @@
 						<string key="orderDate">UILabel</string>
 						<string key="orderLabel">UILabel</string>
 						<string key="orderSyncDate">UILabel</string>
+						<string key="priceLabel">UILabel</string>
 						<string key="productDetailView">EQProductDetailView</string>
 						<string key="quantityTextField">UITextField</string>
 						<string key="segmentArticles">UISegmentedControl</string>
@@ -4513,6 +4637,10 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="orderSyncDate">
 							<string key="name">orderSyncDate</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="priceLabel">
+							<string key="name">priceLabel</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="productDetailView">
@@ -4670,6 +4798,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/UICollectionViewFlowLayout.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UICollectionViewLayout</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UICollectionViewLayout.h</string>
 					</object>
 				</object>
 			</array>
